--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,11 +3,6 @@
    padding:7px;
 }
 
-.wellPad{
-   padding-right:50px;
-   padding-left:50px;
-}
-
 /*used to stop nav overlap*/
 .conMar{
    margin-top:110px;
@@ -18,6 +13,20 @@
 .modal {
 
   text-align: center;
+}
+
+.totalSec{
+
+    bottom:55px;
+    padding-bottom:5px;
+    position:fixed;
+    width:90%;
+    right: 0;
+    left: 0;
+    margin-right: auto;
+    margin-left: auto;
+    background:#F8F8F8;
+    border:1px solid #E7E7E7;
 }
 
 @media screen and (min-width: 768px) { 
