--- a/www/css/style.css
+++ b/www/css/style.css
@@ -29,6 +29,25 @@
     border:1px solid #E7E7E7;
 }
 
+.searchBar{
+    position:fixed; 
+    margin-top:25px;
+    width:50%;
+    right: 0;
+    left: 0;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.searchContainer{
+    top:70px;
+    z-index:5;
+    width:100%;
+    height:80px;
+    position:fixed; 
+    background:white;
+}
+
 @media screen and (min-width: 768px) { 
   .modal:before {
     display: inline-block;
