--- a/platforms/browser/www/css/style.css
+++ b/platforms/browser/www/css/style.css
@@ -30,7 +30,7 @@
 }
 
 .searchBar{
-    position:fixed; 
+    position:fixed;
     margin-top:25px;
     width:50%;
     right: 0;
@@ -44,11 +44,11 @@
     z-index:5;
     width:100%;
     height:80px;
-    position:fixed; 
+    position:fixed;
     background:white;
 }
 
-@media screen and (min-width: 768px) { 
+@media screen and (min-width: 768px) {
   .modal:before {
     display: inline-block;
     vertical-align: middle;
@@ -65,4 +65,18 @@
   display: inline-block;
   text-align: left;
   vertical-align: middle;
+}
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
+
+
+
+@media screen and (max-width: 768px){
+   .imgMargin {
+      margin-top:35px;
+   }
 }
